--- a/src/main/resources/templates/admin-fragments.html
+++ b/src/main/resources/templates/admin-fragments.html
@@ -31,7 +31,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">Admin</div>
+        <div class="sidebar-brand-text mx-3">TBS Admin</div>
     </a>
 
     <!-- Divider -->
@@ -54,7 +54,7 @@
 
     <!-- Nav Item - Categories -->
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/admin/categories}">
+        <a class="nav-link" th:href="@{/admin/categories?pageNo=0}">
             <i class="fas fa-folder"></i>
             <span>Categories</span></a>
     </li>
@@ -97,19 +97,19 @@
         <i class="fa fa-bars"></i>
     </button>
 
-    <!-- Topbar Search -->
-    <form
-            class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-        <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                   aria-label="Search" aria-describedby="basic-addon2">
-            <div class="input-group-append ml-sm-1">
-                <button class="btn btn-primary" type="button">
-                    <i class="fas fa-search fa-sm"></i>
-                </button>
-            </div>
-        </div>
-    </form>
+<!--    &lt;!&ndash; Topbar Search &ndash;&gt;-->
+<!--    <form-->
+<!--            class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 mt-3 my-2 my-md-0 mw-100 navbar-search">-->
+<!--        <div class="input-group">-->
+<!--            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."-->
+<!--                   aria-label="Search" aria-describedby="basic-addon2">-->
+<!--            <div class="input-group-append ml-sm-1">-->
+<!--                <button class="btn btn-primary" type="button">-->
+<!--                    <i class="fas fa-search fa-sm"></i>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </form>-->
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
@@ -295,7 +295,7 @@
 <footer th:fragment="footer" class="sticky-footer bg-white">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
-            <span>Copyright &copy; The BookShelf 2023</span>
+            <span>Copyright &copy; The Bookshelf 2023</span>
         </div>
     </div>
 </footer>
@@ -319,7 +319,7 @@
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
+                <a class="btn btn-primary" th:href="@{/logout-admin}">Logout</a>
             </div>
         </div>
     </div>
