--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -29,7 +29,7 @@
                                     <div th:if = "${param.logout}" class="alert alert-success text-center">
                                         You have been logged out!
                                     </div>
-                                    <form class="user" th:action="@{/login}" method="post">
+                                    <form class="user" th:action="@{/login-admin}" method="post">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
                                                    id="username" aria-describedby="emailHelp" name="username"
